--- a/Store/Views/Shared/_Layout.cshtml
+++ b/Store/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 
 <head>
   <meta name="viewport" content="width=device-width" />
-  <title>SportsStore</title>
+  <title>Store</title>
 </head>
 
 <body>
