Update view to use pagination view model.

--- a/Store/Views/Home/Index.cshtml
+++ b/Store/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
-@model IQueryable<Product>
-@foreach (var p in Model ?? Enumerable.Empty<Product>())
+@model ProductsListViewModel
+@foreach (var p in Model?.Products ?? Enumerable.Empty<Product>())
 {
   <div>
     <h3>@p.Name</h3>
