--- a/Store/Views/Shared/_Layout.cshtml
+++ b/Store/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
   </div>
   <div class="row m-1 p-1">
     <div id="categories" class="col-3">
-      Store Example.
+      <vc:navigation-menu />
     </div>
     <div class="col-9">
       @RenderBody()
