Use ViewBag in the vc to get current category from route. Then it uses this information to highlight the current category in the navigation component.

--- a/Store/Views/Shared/Components/NavigationMenu/Default.cshtml
+++ b/Store/Views/Shared/Components/NavigationMenu/Default.cshtml
@@ -5,7 +5,10 @@
   </a>
   @foreach (string category in Model ?? Enumerable.Empty<string>())
   {
-    <a class="btn btn-outline-secondary" asp-action="Index" asp-controller="Home" asp-route-category="@category"
+    <a class="btn @(category == ViewBag.SelectedCategory ? "btn-primary" : "btn-outline-secondary")"
+    asp-action="Index" 
+    asp-controller="Home" 
+    asp-route-category="@category"
     asp-route-productPage="1">
       @category
     </a>
